--- a/app/views/schedules/history.html.erb
+++ b/app/views/schedules/history.html.erb
@@ -1,29 +1,100 @@
-<h1>Your room reservation history</h1>
-<table>
-  <tr>
-    <th>Room number</th>
-    <th> Building </th>
-    <th>Size</th>
-    <th>Start at</th>
-    <th>End at</th>
-    <th colspan="5"></th>
-  </tr>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Room App</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <% @schedules.each do |schedule| %>
-      <tr>
-        <td><%= schedule.room_number %></td>
-        <% room = Room.find_by_number(schedule.room_number)%>
-        <% if @room.building == 0 %>
-            <td>D.H.Hill</td>
-        <% else %>
-            <td>James.B.Hunt</td>
-        <% end %>
+</head>
+<body>
+<div class="header">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-5">
+        <!-- Logo -->
+        <div class="logo">
+          <h1><a href="/">Room App</a></h1>
+        </div>
+      </div>
+      <div class="col-md-5">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="input-group form">
+              <input type="text" class="form-control" placeholder="Search...">
+              <span class="input-group-btn">
+               <button class="btn btn-primary" type="button">Search</button>
+             </span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
-        <td><%= room.size%></td>
-        <td><%= schedule.start_at %></td>
-        <td><%= schedule.end_at%></td>
-      </tr>
-  <% end %>
-</table>
+<div class="page-content">
+  <div class="row">
+    <div class="col-md-2">
+      <div class="sidebar content-box" style="display: block;">
+        <ul class="nav">
+          <!-- Main menu -->
+          <li><a href="<%= edit_member_path(current_member) %>"><i class="glyphicon glyphicon-cog"></i> Profile </a></li>
+          <li><a href="/schedules"><i class="glyphicon glyphicon-calendar"></i> Reservation </a></li>
+          <li><a href="<%=schedules_history_path%>"><i class="glyphicon glyphicon-list"></i>History</a></li>
+          <li><a href="/members/logout"><i class="glyphicon glyphicon-hand-right"></i> Logout </a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="col-md-10">
 
-<%= link_to 'Back to member', members_path %>
+      <!-- Page Features -->
+      <div class="row text-center">
+
+        <table class="table table-striped table-bordered table-hover">
+          <thead>
+          <tr>
+            <th>Room number</th>
+            <th> Building </th>
+            <th>Size</th>
+            <th>Start at</th>
+            <th>End at</th>
+          </tr>
+          </thead>
+          <tbody>
+          <% @schedules.each do |schedule| %>
+              <tr>
+                <td><%= schedule.room_number %></td>
+                <% room = Room.find_by_number(schedule.room_number)%>
+                <% if room.building == 0 %>
+                    <td>D.H.Hill</td>
+                <% else %>
+                    <td>James.B.Hunt</td>
+                <% end %>
+
+                <td><%= room.size%></td>
+                <td><%= schedule.start_at %></td>
+                <td><%= schedule.end_at%></td>
+              </tr>
+          <% end %>
+          </tbody>
+        </table>
+
+      </div>
+
+      <!-- /.row -->
+
+      <hr>
+
+    </div>
+  </div>
+</div>
+
+<footer class="navbar-fixed-bottom">
+  <div class="container">
+    <div class="copy text-center">
+      Library Reservation System
+    </div>
+  </div>
+</footer>
+
+</body>
+</html>
