--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -37,10 +37,10 @@
 		  	<div class="sidebar content-box" style="display: block;">
                 <ul class="nav">
                     <!-- Main menu -->
-                    <li><a href="<%= edit_member_path(current_member) %>"><i class="glyphicon glyphicon-calendar"></i>Profile</a></li>
-                    <li><a href="/schedules"><i class="glyphicon glyphicon-list"></i>Reservation</a></li>
-                    <li><a href="<%=schedules_history_path%>"><i class="glyphicon glyphicon-list"></i>History</a></li>
-                    <li><a href="/members/logout"><i class="glyphicon glyphicon-pencil"></i>Logout</a></li>
+                  <li><a href="<%= edit_member_path(current_member) %>"><i class="glyphicon glyphicon-cog"></i> Profile </a></li>
+                  <li><a href="/schedules"><i class="glyphicon glyphicon-calendar"></i> Reservation </a></li>
+                  <li><a href="<%=schedules_history_path%>"><i class="glyphicon glyphicon-list"></i> History </a></li>
+                  <li><a href="/members/logout"><i class="glyphicon glyphicon-hand-right"></i> Logout </a></li>
                 </ul>
              </div>
 		  </div>
